log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 08:10:47 PM UTC: 
 tests:  0|6
total_score: 0/70
b851aa8
Thu 30 Mar 2023 08:22:06 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2aeb9c6
Thu 30 Mar 2023 08:25:21 PM UTC: 
 tests:  1|5
total_score: 10/70
3282980
Thu 30 Mar 2023 08:31:29 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   24 |   if (l->size == l->capacity)
      |   ^~
arraylist.c:26:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   26 |     l->data = (void **)realloc (l->data, l->capacity*sizeof(void *));
      |     ^
cc1: all warnings being treated as errors
Compilation failed
154b59a
Thu 30 Mar 2023 08:31:56 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
dd2c851
